# zyn

./: .gitignore  abs-qt.pro  config  ressources_qt.qrc
ExternalPrograms/Controller/: Controller.C
doc/: effects.txt
src/: CMakeLists.txt  globals.h  main.cpp
src/Controls/: ArrayControl.cpp  ArrayControl.h  Control.cpp  Control.h  DescRanger.cpp  DescRanger.h  Event.h  EventClasses.cpp  EventClasses.h  GenControl.cpp  GenControl.h  Job.cpp  Node.cpp  Node.h  Ranger.cpp  Ranger.h  Selector.cpp  Selector.h  Toggle.cpp  Toggle.h
src/DSP/: AnalogFilter.cpp  FormantFilter.cpp  SVFilter.cpp  SVFilter.h  Unison.cpp
src/Effects/: Alienwah.cpp  Alienwah.h  CMakeLists.txt  Chorus.cpp  Chorus.h  Composite.cpp  Composite.h  Distorsion.cpp  Distorsion.h  DynamicFilter.cpp  DynamicFilter.h  EQ.cpp  EQ.h  Echo.cpp  Echo.h  Effect.cpp  Effect.h  EffectMgr.cpp  Phaser.cpp  Phaser.h  Reverb.cpp  Reverb.h
src/Misc/: Allocator.cpp  Allocator.h  Bank.cpp  CMakeLists.txt  Config.cpp  Master.cpp  Master.h  MiddleWare.cpp  Part.cpp  Part.h  Util.cpp  Util.h  osc.cpp  osc.h
src/Mxml/: CMakeLists.txt  config.h
src/NewUI/: ArrayControlHelper.cpp  ArrayControlHelper.h  BankLoader.ui  CMakeLists.txt  ControlHelper.cpp  ControlHelper.h  DebugInterface.cpp  Dial.cpp  Dial.h  GroupBox.cpp  GroupBox.h  MasterUI.cpp  MasterUI.h  MasterUI.ui  Oscil.ui  OscilWidget.cpp  OscilWidget.h  Preferences.cpp  Preferences.h  Preferences.ui  Slider.cpp  SpectrumWidget.cpp  SpectrumWidget.h
src/Nio/: AlsaEngine.cpp  AudioOut.cpp  CMakeLists.txt  EngineMgr.cpp  InMgr.cpp  InMgr.h  JackEngine.cpp  JackMultiEngine.cpp  MidiEvent.cpp  MidiEvent.h  Nio.cpp  NulEngine.cpp  NulEngine.h  OutMgr.cpp  SeqEngine.cpp  SeqEngine.h
src/Output/: DSSIaudiooutput.cpp  DSSIaudiooutput.h
src/Params/: Presets.h  (+10 more)
src/UI_Qt/: CMakeLists.txt  Connection.cpp  MasterUI.cpp  MasterUI.h  NSM.cpp  NSM.h  README.txt  ZynAddSubFX.pro  addsynthwidget.cpp  addsynthwidget.h  addsynthwidget.ui  commands.txt  envwidget.cpp  envwidget.h  envwidget.ui  filterparamwidget.cpp  filterparamwidget.h  filterparamwidget.ui  funcwidget.cpp  funcwidget.h  funcwidget.ui  lfoenvwidget.cpp  lfoenvwidget.h  lfoenvwidget.ui  lfowidget.cpp  lfowidget.h  lfowidget.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtoscinterface.cpp  qtoscinterface.h  qtoscnode.cpp  qtoscnode.h  qtoscobject.cpp  qtoscobject.h  qtoscpane.cpp  qtoscpane.h  qtoscwidget.cpp  (+31 more)
src/UI_Qt/cmake/modules/: DetectMachine.cmake  MyCPack.cmake
src/UI_Qt/lmms/: CMakeLists.txt  Piano.cpp  Piano.h  PianoView.cpp  PianoView.h  lmms_basics.h  midi_time.h  midiconverter.cpp  midiconverter.h  note.h
(+51 files in other folders)
